Add syntax highlighting to blog posts

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+  <link href="%PUBLIC_URL%/lib/prism.css" rel="stylesheet" />
+  <script src="%PUBLIC_URL%/lib/prism.js"></script>
+
   <title>Kyle Pollich - Lancaster, PA Web Developer</title>
 </head>
 
